Added rock and scissors buttons, changed message for start game

--- a/iMessage Ext/Base.lproj/MainInterface.storyboard
+++ b/iMessage Ext/Base.lproj/MainInterface.storyboard
@@ -73,6 +73,22 @@
                                     <action selector="paper:" destination="fNZ-6f-8GZ" eventType="touchUpInside" id="mna-Mr-N4h"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="elY-8D-U57">
+                                <rect key="frame" x="55" y="123" width="35" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Rock"/>
+                                <connections>
+                                    <action selector="rock:" destination="fNZ-6f-8GZ" eventType="touchUpInside" id="IKF-Lh-dvZ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Ev-gL-pUL">
+                                <rect key="frame" x="201" y="127" width="58" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Scissors"/>
+                                <connections>
+                                    <action selector="scissors:" destination="fNZ-6f-8GZ" eventType="touchUpInside" id="z71-3w-PTP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="lNe-Nm-qIp"/>
@@ -80,7 +96,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wUN-gI-jYq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="82" y="700"/>
+            <point key="canvasLocation" x="80.799999999999997" y="699.40029985007504"/>
         </scene>
     </scenes>
 </document>
