Im pretty sure it works now

--- a/iMessage Ext/Base.lproj/MainInterface.storyboard
+++ b/iMessage Ext/Base.lproj/MainInterface.storyboard
@@ -77,6 +77,13 @@
                                     <action selector="scissors:" destination="fNZ-6f-8GZ" eventType="touchUpInside" id="z71-3w-PTP"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="it9-Od-Deb">
+                                <rect key="frame" x="73" y="49" width="231" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This is game" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hXQ-fr-VPC">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -91,6 +98,7 @@
                     </view>
                     <connections>
                         <outlet property="label" destination="hXQ-fr-VPC" id="dVu-wz-ZBh"/>
+                        <outlet property="result" destination="it9-Od-Deb" id="HyX-dM-3g1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wUN-gI-jYq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
